; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/kcomedilib/extr_dio.c_comedi_dio_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/kcomedilib/extr_dio.c_comedi_dio_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_insn = type { i32, i32*, i32, i32, i32 }

@INSN_CONFIG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @comedi_dio_config(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.comedi_insn, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = call i32 @memset(%struct.comedi_insn* %9, i32 0, i32 32)
  %11 = load i32, i32* @INSN_CONFIG, align 4
  %12 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 4
  store i32 %11, i32* %12, align 8
  %13 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 0
  store i32 1, i32* %13, align 8
  %14 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 1
  store i32* %8, i32** %14, align 8
  %15 = load i32, i32* %6, align 4
  %16 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 2
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @CR_PACK(i32 %17, i32 0, i32 0)
  %19 = getelementptr inbounds %struct.comedi_insn, %struct.comedi_insn* %9, i32 0, i32 3
  store i32 %18, i32* %19, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @comedi_do_insn(i8* %20, %struct.comedi_insn* %9)
  ret i32 %21
}

declare dso_local i32 @memset(%struct.comedi_insn*, i32, i32) #1

declare dso_local i32 @CR_PACK(i32, i32, i32) #1

declare dso_local i32 @comedi_do_insn(i8*, %struct.comedi_insn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
